# hft-trading-system

./: .gitignore  CMakeLists.txt
benchmarks/: latency_tests.cpp  memory_bandwidth_tests.cpp  order_throughput_tests.cpp
docs/: Architecture.md  NetworkingOptimization.md  PerformanceTuning.md  README.md
scripts/: build.sh  deploy.sh  test.sh
src/: main.cpp
src/core/: ExecutionEngine.cpp  ExecutionEngine.h  Market.cpp  Market.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Portfolio.cpp  Portfolio.h  RiskManager.cpp  RiskManager.h  Trade.cpp  Trade.h
src/infrastructure/: Database.cpp  Database.h  Logger.cpp  Logger.h  MarketData.cpp  MarketData.h  Networking.cpp  Networking.h  OrderRouter.cpp  OrderRouter.h
src/strategies/: ExecutionAlgorithms.cpp  ExecutionAlgorithms.h  LatencyArbitrage.cpp  LatencyArbitrage.h  MarketMaking.cpp  MarketMaking.h
src/utils/: Config.cpp  Config.h  MemoryManager.cpp  MemoryManager.h  Profiling.cpp  Profiling.h
tests/: test_ExecutionEngine.cpp  test_MarketData.cpp  test_OrderBook.cpp  test_Trade.cpp
